--- a/results/pipeline_info/execution_timeline.html
+++ b/results/pipeline_info/execution_timeline.html
@@ -206,9 +206,9 @@ $(function() {
 
   // Nextflow report data
   window.data = {
-    "elapsed": "23m 22s",
+    "elapsed": "2s",
     "beginningMillis": 1731439233243,
-    "endingMillis": 1731582151030,
+    "endingMillis": 1732102828050,
     "processes": [
         {"label": "COLLECT:FIND_AND_FETCH", "cached": true, "index": 0, "times": [{"starting_time": 1731439233243, "ending_time": 1731439233262}, {"starting_time": 1731439233262, "ending_time": 1731439390615, "label": "2m 38s \/ 1.1 GB \/ CACHED"}, {"starting_time": 1731439390615, "ending_time": 1731439390961}]},
         {"label": "COLLECT:FINDING_RIBOSEQ", "cached": true, "index": 1, "times": [{"starting_time": 1731439390998, "ending_time": 1731439391063}, {"starting_time": 1731439391063, "ending_time": 1731439432225, "label": "41.6s \/ 3.1 GB \/ CACHED"}, {"starting_time": 1731439432225, "ending_time": 1731439432629}]},
@@ -216,7 +216,7 @@ $(function() {
         {"label": "COLLECT:STANDARDISE_COLUMN_VALUES", "cached": true, "index": 3, "times": [{"starting_time": 1731439447678, "ending_time": 1731439447767}, {"starting_time": 1731439447767, "ending_time": 1731439741267, "label": "4m 54s \/ 7.9 GB \/ CACHED"}, {"starting_time": 1731439741267, "ending_time": 1731439741513}]},
         {"label": "COLLECT:FINALISE_METADATA", "cached": true, "index": 4, "times": [{"starting_time": 1731439741524, "ending_time": 1731439741613}, {"starting_time": 1731439741613, "ending_time": 1731439751995, "label": "10.7s \/ 897.6 MB \/ CACHED"}, {"starting_time": 1731439751995, "ending_time": 1731439752249}]},
         {"label": "PROCESS:PREPARE_METADATA", "cached": true, "index": 5, "times": [{"starting_time": 1731575080268, "ending_time": 1731575080295}, {"starting_time": 1731575080295, "ending_time": 1731575117331, "label": "37.4s \/ 167.4 MB \/ CACHED"}, {"starting_time": 1731575117331, "ending_time": 1731575117699}]},
-        {"label": "PROCESS:GENERATE_FIXTURES", "cached": false, "index": 6, "times": [{"starting_time": 1731580750607, "ending_time": 1731580750657}, {"starting_time": 1731580750657, "ending_time": 1731582150338, "label": "23m 20s \/ -"}]}
+        {"label": "PROCESS:GENERATE_FIXTURES", "cached": true, "index": 6, "times": [{"starting_time": 1731691730704, "ending_time": 1731691730758}, {"starting_time": 1731691730758, "ending_time": 1731695010520, "label": "54m 40s \/ 439.9 MB \/ CACHED"}, {"starting_time": 1731695010520, "ending_time": 1731695010912}]}
     ]
 }
 ;
